--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
 	"version": "1.0.0",
 	"description": "A web app to share and categorize custom orders at quick service restaurants.",
 	"dependencies": {
+		"@zeit/next-css": "^1.0.1",
 		"axios": "^0.19.0",
 		"babel-eslint": "10.0.1",
 		"change-case": "^3.1.0",
 		"express": "^4.17.1",
+		"isomorphic-fetch": "^2.2.1",
+		"isomorphic-unfetch": "^3.0.0",
 		"next": "^9.0.1",
 		"next-routes": "^1.4.2",
+		"node-sass": "^4.12.0",
 		"react": "^16.8.6",
 		"react-dom": "^16.8.6",
 		"styled-components": "^4.3.2"
