--- a/now.json
+++ b/now.json
@@ -1,4 +1,5 @@
 {
 	"version": 2,
-	"builds": [{ "src": "package.json", "use": "@now/next" }]
+	"name": "order4",
+	"builds": [{ "src": "package.json", "use": "@now/static-build" }]
 }
