--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
 	"version": "1.0.0",
 	"description": "A web app to share and categorize custom orders at quick service restaurants.",
 	"dependencies": {
-		"@zeit/next-css": "^1.0.1",
 		"axios": "^0.19.0",
 		"babel-eslint": "10.0.1",
 		"change-case": "^3.1.0",
@@ -21,10 +20,12 @@
 	"main": "index.js",
 	"scripts": {
 		"dev": "next dev",
+		"server-dev": "node server.js",
 		"build": "next build",
 		"export": "next export",
 		"start": "next start",
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"now-build": "next build && next export -o dist"
 	},
 	"eslintConfig": {
 		"extends": "wesbos",
@@ -34,8 +35,9 @@
 				{
 					"trailingComma": "es5",
 					"singleQuote": true,
-					"printWidth": 80,
-					"tabWidth": 3
+					"printWidth": 100,
+					"tabWidth": 3,
+					"jsxBracketSameLine": true
 				}
 			]
 		}
