--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
 					"singleQuote": true,
 					"printWidth": 100,
 					"tabWidth": 3,
-					"jsxBracketSameLine": true
+					"jsxBracketSameLine": false
 				}
 			]
 		}
