--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 	"dependencies": {
 		"axios": "^0.19.0",
 		"babel-eslint": "10.0.1",
+		"babel-plugin-import-static-files": "^1.0.4",
 		"change-case": "^3.1.0",
 		"express": "^4.17.1",
 		"isomorphic-fetch": "^2.2.1",
@@ -18,6 +19,8 @@
 		"path-match": "^1.2.4",
 		"react": "^16.8.6",
 		"react-dom": "^16.8.6",
+		"react-share": "^3.0.0",
+		"shuffle-array": "^1.0.1",
 		"styled-components": "^4.3.2"
 	},
 	"eslintConfig": {
