--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"path-match": "^1.2.4",
 		"react": "^16.8.6",
 		"react-dom": "^16.8.6",
+		"react-ga": "^2.6.0",
 		"react-share": "^3.0.0",
 		"shuffle-array": "^1.0.1",
 		"styled-components": "^4.3.2"
