--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
 		"react-ga": "^2.6.0",
 		"react-share": "^3.0.0",
 		"shuffle-array": "^1.0.1",
-		"styled-components": "^4.3.2"
+		"styled-components": "^4.3.2",
+		"styled-media-query": "^2.1.2"
 	},
 	"eslintConfig": {
 		"extends": "wesbos",
