--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"next-routes": "^1.4.2",
 		"node-sass": "^4.12.0",
 		"path-match": "^1.2.4",
+		"prop-types": "^15.7.2",
 		"react": "^16.8.6",
 		"react-dom": "^16.8.6",
 		"react-ga": "^2.6.0",
