--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"react": "^16.12.0",
 		"react-dom": "^16.12.0",
 		"react-ga": "^2.7.0",
+		"react-gtm-module": "^2.0.8",
 		"react-share": "^3.0.1",
 		"shuffle-array": "^1.0.1",
 		"styled-components": "^4.4.1",
