--- a/now.json
+++ b/now.json
@@ -1,5 +1,17 @@
 {
   "version": 2,
   "name": "order4",
-  "builds": [{ "src": "package.json", "use": "@now/next@2.1.0" }]
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@now/next@2.1.0"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)/",
+      "status": 301,
+      "headers": { "Location": "/$1" }
+    }
+  ]
 }
