--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "create-next-example-app",
   "scripts": {
+    "dev now": "now dev",
     "dev": "next",
     "build": "next build",
     "start": "next start"
@@ -10,13 +11,16 @@
     "babel-eslint": "10.0.1",
     "babel-plugin-import-static-files": "^1.0.4",
     "change-case": "^3.1.0",
+    "dotenv": "^8.2.0",
     "fontfaceobserver": "^2.1.0",
+    "install": "^0.13.0",
     "isomorphic-fetch": "^2.2.1",
     "isomorphic-unfetch": "^3.0.0",
     "next": "^9.1.4",
     "next-routes": "^1.4.2",
     "next-seo": "^3.0.0",
     "node-sass": "^4.13.0",
+    "npm": "^6.13.1",
     "path-match": "^1.2.4",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
