--- a/now.json
+++ b/now.json
@@ -7,6 +7,11 @@
       "use": "@now/next@2.1.0"
     }
   ],
+  "build": {
+    "env": {
+      "api_key": "@api_key"
+    }
+  },
   "routes": [
     {
       "src": "/(.*)/",
