--- a/package.json
+++ b/package.json
@@ -10,13 +10,9 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
-    "babel-eslint": "10.0.1",
     "babel-plugin-import-static-files": "^1.0.4",
     "change-case": "^3.1.0",
     "dotenv": "^8.2.0",
-    "fontfaceobserver": "^2.1.0",
-    "install": "^0.13.0",
-    "install-peerdeps": "^2.0.1",
     "isomorphic-fetch": "^2.2.1",
     "isomorphic-unfetch": "^3.0.0",
     "next": "^9.1.4",
@@ -33,8 +29,7 @@
     "shuffle-array": "^1.0.1",
     "styled-components": "^4.4.1",
     "styled-media-query": "^2.1.2",
-    "unique-concat": "^0.2.2",
-    "webfontloader": "^1.6.28"
+    "unique-concat": "^0.2.2"
   },
   "eslintConfig": {
     "extends": "wesbos",
@@ -53,7 +48,8 @@
   },
   "devDependencies": {
     "@types/node": "^12.12.14",
-    "@types/react": "^16.9.13",
+    "@types/react": "^16.9.15",
+    "babel-eslint": "^9.0.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.1",
     "eslint-config-prettier": "^4.3.0",
@@ -65,7 +61,7 @@
     "eslint-plugin-react": "^7.17.0",
     "eslint-plugin-react-hooks": "^1.7.0",
     "install-peers": "^1.0.3",
-    "now-next-routes": "^1.1.2",
+    "now-next-routes": "^1.1.3",
     "prettier": "^1.19.1"
   }
 }
