Refactor search and nav components

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "create-next-example-app",
+  "name": "meal-dig-client",
   "scripts": {
     "build-sitemap": "node node_modules/.bin/buildSitemap.js",
     "get-tags": "node -e 'require(\"./utils/tag-store.js\").getTags()'",
@@ -15,11 +15,11 @@
     "dotenv": "^8.2.0",
     "isomorphic-fetch": "^2.2.1",
     "isomorphic-unfetch": "^3.0.0",
-    "next": "^9.1.4",
+    "next": "^9.1.5",
     "next-routes": "^1.4.2",
-    "next-seo": "^3.0.0",
+    "next-seo": "^3.1.0",
     "node-sass": "^4.13.0",
-    "npm": "^6.13.2",
+    "npm": "^6.13.3",
     "path-match": "^1.2.4",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
@@ -47,15 +47,15 @@
     }
   },
   "devDependencies": {
-    "@types/node": "^12.12.14",
-    "@types/react": "^16.9.15",
+    "@types/node": "^12.12.16",
+    "@types/react": "^16.9.16",
     "babel-eslint": "^9.0.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.1",
     "eslint-config-prettier": "^4.3.0",
     "eslint-config-wesbos": "0.0.19",
     "eslint-plugin-html": "^5.0.5",
-    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-import": "^2.19.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.17.0",
