--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@types/node": "^12.12.16",
     "@types/react": "^16.9.16",
     "babel-eslint": "^9.0.0",
+    "babel-plugin-styled-components": "^1.10.6",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.1",
     "eslint-config-prettier": "^4.3.0",
