Added sort options on orders page

--- a/package.json
+++ b/package.json
@@ -5,29 +5,32 @@
     "get-tags": "node -e 'require(\"./utils/tag-store.js\").getTags()'",
     "dev-now": "now dev",
     "dev": "next",
-    "build": "npm run get-tags; npm run build-sitemap; next build",
+    "pre-build": "npm run get-tags; npm run build-sitemap;",
+    "build": "next build",
     "start": "next start"
   },
   "dependencies": {
-    "axios": "^0.19.0",
+    "@babel/runtime": "^7.8.7",
+    "@now/next": "^2.4.0",
+    "axios": "^0.19.2",
     "babel-plugin-import-static-files": "^1.0.4",
     "change-case": "^3.1.0",
     "dotenv": "^8.2.0",
     "isomorphic-fetch": "^2.2.1",
     "isomorphic-unfetch": "^3.0.0",
-    "next": "^9.1.5",
+    "next": "^9.3.0",
     "next-routes": "^1.4.2",
-    "next-seo": "^3.1.0",
-    "node-sass": "^4.13.0",
-    "npm": "^6.13.3",
+    "next-seo": "^4.4.0",
+    "node-sass": "^4.13.1",
+    "npm": "^6.14.2",
     "path-match": "^1.2.4",
     "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
     "react-gtm-module": "^2.0.8",
     "react-share": "^3.0.1",
     "shuffle-array": "^1.0.1",
-    "styled-components": "^4.4.1",
+    "styled-components": "^5.0.1",
     "styled-media-query": "^2.1.2",
     "unique-concat": "^0.2.2"
   },
@@ -47,19 +50,19 @@
     }
   },
   "devDependencies": {
-    "@types/node": "^12.12.16",
-    "@types/react": "^16.9.16",
+    "@types/node": "^12.12.30",
+    "@types/react": "^16.9.23",
     "babel-eslint": "^9.0.0",
-    "babel-plugin-styled-components": "^1.10.6",
+    "babel-plugin-styled-components": "^1.10.7",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.1",
     "eslint-config-prettier": "^4.3.0",
     "eslint-config-wesbos": "0.0.19",
     "eslint-plugin-html": "^5.0.5",
-    "eslint-plugin-import": "^2.19.1",
+    "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-react": "^7.17.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^1.7.0",
     "install-peers": "^1.0.3",
     "now-next-routes": "^1.1.3",
