--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^8.2.0",
     "isomorphic-fetch": "^2.2.1",
     "isomorphic-unfetch": "^3.0.0",
+    "moment": "^2.24.0",
     "next": "^9.3.0",
     "next-routes": "^1.4.2",
     "next-seo": "^4.4.0",
@@ -28,6 +29,7 @@
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-gtm-module": "^2.0.8",
+    "react-moment": "^0.9.7",
     "react-share": "^3.0.1",
     "shuffle-array": "^1.0.1",
     "styled-components": "^5.0.1",
